chore: refactor dozer-api
