# dozer-api/src/controllers/connections.rs
@@ -1,15 +1,32 @@
-use crate::api::connections;
-use crate::grpc_client::ingestion_client;
 use crate::models::ConnectionResponse;
+use crate::services::connections;
 use crate::services::validation;
 use crate::{db::pool::DbPool, models::ConnectionRequest};
 use actix_web::{
-    post,
-    web::{Data, Json},
+    get, post,
+    web::{self, Data, Json},
     Error, HttpResponse,
 };
-use dozer_shared::ingestion::connection_response::Response;
+
+use dozer_ingestion::connectors::postgres;
 use serde_json::Value;
+
+#[get("/connections")]
+async fn index(pool: web::Data<DbPool>) -> Json<String> {
+    return Json("Hello".to_string());
+    // let conn = pool.get().expect("couldn't get db connection from pool");
+    // let connections = web::block(move || get_connections(&*conn))
+    //     .await
+    //     .map_err(|e| {
+    //         eprintln!("{}", e);
+    //         HttpResponse::InternalServerError().finish()
+    //     });
+
+    // match connections {
+    //     Ok(connection) => Ok(HttpResponse::Ok().json(connection)),
+    //     _ => Ok(HttpResponse::BadRequest().finish())
+    // }
+}
 
 #[post("/connections")]
 async fn create_connection(pool: Data<DbPool>, input: Json<Value>) -> Result<HttpResponse, Error> {
@@ -22,8 +39,7 @@ async fn create_connection(pool: Data<DbPool>, input: Json<Value>) -> Result<Htt
     //         eprintln!("{}", e);
     //         HttpResponse::InternalServerError().finish()
     //     });
-    let inserted_result =
-        connections::services::create_connection(&conn, result.unwrap().into()).unwrap();
+    let inserted_result = connections::create_connection(&conn, result.unwrap().into()).unwrap();
     println!("=== inserted_result {:?}", inserted_result);
     Ok(HttpResponse::Ok().json(ConnectionResponse::from(inserted_result)))
     // connections::services::create_connection(pool, result.unwrap()).await;
